--- a/index.html
+++ b/index.html
@@ -1,19 +1,77 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>TipsNote : GitHub Pages Sample</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/marx/2.0.4/marx.css">
-</head>
+<!doctype html>
+<meta charset='UTF-8'>
+<meta name='viewport' content='width=device-width, initial-scale=1'>
+<style>
+video {
+    width: 100%;
+    max-width: 400px;
+}
+</style>
+<title>HayakawaTakinoue2019</title>
+<h1>Supplementary Movies</h1>
+<!--
+<a href='https://arxiv.org/abs/1907.10252'>https://arxiv.org/abs/1907.10252</a>
+-->
+<h2>MovieS1</h2>
+<a href='MovieS1.avi'>Download "MovieS1.avi"</a><br>
+<video controls>
+    <source src='MovieS1.mp4'>
+    <source src='MovieS1.webm'>
+</video>
 
-<body>
-<main>
-  <h1>GitHub Pages のサンプルです</h1>
-  <a href="http://www.tam-tam.co.jp/tipsnote/"><button>TipsNote に戻る</button></a>
-</main>
+<h2>MovieS2</h2>
+<a href='MovieS2.avi'>Download "MovieS2.avi"</a><br>
+<video controls>
+    <source src='MovieS2.mp4'>
+    <source src='MovieS2.webm'>
+</video>
 
-<script>
-console.log('GitHub Pages Sample');
-</script>
-</body>
-</html>
+<h2>MovieS3</h2>
+<a href='MovieS3.avi'>Download "MovieS3.avi"</a><br>
+<video controls>
+    <source src='MovieS3.mp4'>
+    <source src='MovieS3.webm'>
+</video>
+
+<h2>MovieS4</h2>
+<a href='MovieS4.avi'>Download "MovieS4.avi"</a><br>
+<video controls>
+    <source src='MovieS4.mp4'>
+    <source src='MovieS4.webm'>
+</video>
+
+<h2>MovieS5</h2>
+<a href='MovieS5.avi'>Download "MovieS5.avi"</a><br>
+<video controls>
+    <source src='MovieS5.mp4'>
+    <source src='MovieS5.webm'>
+</video>
+
+<h2>MovieS6</h2>
+<a href='MovieS6.avi'>Download "MovieS6.avi"</a><br>
+<video controls>
+    <source src='MovieS6.mp4'>
+    <source src='MovieS6.webm'>
+</video>
+
+<h2>MovieS7</h2>
+<a href='MovieS7.avi'>Download "MovieS7.avi"</a><br>
+<video controls>
+    <source src='MovieS7.mp4'>
+    <source src='MovieS7.webm'>
+</video>
+
+<h2>MovieS8</h2>
+<a href='MovieS8.avi'>Download "MovieS8.avi"</a><br>
+<video controls>
+    <source src='MovieS8.mp4'>
+    <source src='MovieS8.webm'>
+</video>
+
+<h2>Links</h2>
+<ul>
+  <!--
+    <li><a href='https://arxiv.org/abs/1907.10252'>https://arxiv.org/abs/1907.10252</a></li>
+  -->
+    <li><a href='http://www.takinoue-lab.jp/'>Takinoue-lab website</a></li>
+<ul>
