--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@ video {
 <!--
 <a href='https://arxiv.org/abs/1907.10252'>https://arxiv.org/abs/1907.10252</a>
 -->
+
+<h2>Supplementary Materials</h2>
+<a href='test.pdf'>Download "SupplementaryMaterials.pdf"</a><br>
+
 <h2>MovieS1</h2>
 <a href='MovieS1.avi'>Download "MovieS1.avi"</a><br>
 <video controls>
