--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ video {
 }
 </style>
 <title>HayakawaTakinoue2019</title>
-<h1>Supplementary Movies</h1>
+<h1>Supplementary Materials</h1>
 <!--
 <a href='https://arxiv.org/abs/1907.10252'>https://arxiv.org/abs/1907.10252</a>
 -->
@@ -78,4 +78,5 @@ video {
     <li><a href='https://arxiv.org/abs/1907.10252'>https://arxiv.org/abs/1907.10252</a></li>
   -->
     <li><a href='http://www.takinoue-lab.jp/'>Takinoue-lab website</a></li>
+    <li><a href='https://sites.google.com/site/mhayakawashomepage/home'>M.Hayakawa's website</a></li>
 <ul>
